--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@headlessui/vue": "^1.7.7",
         "@heroicons/vue": "^2.0.13",
         "@vitejs/plugin-vue": "^4.0.0",
+        "@webzlodimir/vue-avatar": "^0.0.8",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1"
     }
