--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@vitejs/plugin-vue": "^4.0.0",
         "@webzlodimir/vue-avatar": "^0.0.8",
         "vue": "^3.2.36",
+        "vue-icons": "^2.0.0",
         "vue-loader": "^17.0.1"
     }
 }
