--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^4.0.4"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.2.1",
         "@headlessui/vue": "^1.7.7",
         "@heroicons/vue": "^2.0.13",
         "@vitejs/plugin-vue": "^4.0.0",
