--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.21",
         "tailwindcss": "^3.2.4",
-        "vite": "^4.0.4"
+        "vite": "^4.0.4",
+        "@vue/compiler-sfc": "^3.2.47"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.1",
@@ -23,6 +24,7 @@
         "jquery": "^3.6.3",
         "vue": "^3.2.36",
         "vue-icons": "^2.0.0",
-        "vue-loader": "^17.0.1"
+        "vue-loader": "^17.0.1",
+        "vue-router": "^4.0.13"
     }
 }
