--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
         "@headlessui/vue": "^1.7.7",
         "@heroicons/vue": "^2.0.13",
         "@vitejs/plugin-vue": "^4.0.0",
+        "@vueup/vue-quill": "^1.1.0",
         "@webzlodimir/vue-avatar": "^0.0.8",
         "jquery": "^3.6.3",
-        "quill": "^1.3.7",
         "vue": "^3.2.36",
         "vue-icons": "^2.0.0",
         "vue-loader": "^17.0.1",
